# ScalarHackathon

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
agents/: classifier.py
server/: app.py
