[project]
name = "openenv-email-env"
version = "0.1.0"
description = "OpenEnv Email Classification Environment"
authors = [
    { name="Your Name" }
]
dependencies = [
    "flask",
    "python-dotenv",
    "requests",
    "openenv-core>=0.2.0"
]

[tool.setuptools]
packages = ["agents", "data", "utils"]

[project.scripts]
server = "server.app:app"